syntax = "proto3";

package testapi.hello;

message Hello {
  // Required.
  Primitives required_primitives = 1;
  // Optional.
  Primitives optional_primitives = 2;
  // Required.
  repeated Primitives required_primitives_list = 3;
  // Optional.
  Primitives optional_primitives_list = 4;
}

message Primitives {
  double required_double_value =1;
  float required_float_value = 2;
  int32 required_int32_value = 3;
  int64 required_int64_value = 4;
  uint32 required_uint32_value = 5;
  uint64 required_uint64_value = 6;
  sint32 required_sint32_value = 7;
  sint64 required_sint64_value = 8;
  fixed32 required_fixed32_value = 9;
  fixed64 required_fixed64_value = 10;
  sfixed32 required_sfixed32_value = 11;
  sfixed64 required_sfixed64_value = 12;
  bool required_bool_value = 13;
  string required_string_value = 14;
  // bytes required_bytes_value = 1;
}
